Parser/errors/tcl-tktray.txt
configure: creating ./config.status
config.status: creating Makefile
config.status: creating pkgIndex.tcl
configure: WARNING: unrecognized options: --disable-dependency-tracking, --disable-silent-rules, --without-included-gettext
configure: WARNING: unrecognized options: --disable-dependency-tracking, --disable-silent-rules, --without-included-gettext
+ make -j16
+ make -j16
make: Entering directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
make: Entering directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
make: Entering directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
x86_64-alt-linux-gcc -DPACKAGE_NAME=\"tktray\" -DPACKAGE_TARNAME=\"tktray\" -DPACKAGE_VERSION=\"1.3.9\" -DPACKAGE_STRING=\"tktray\ 1.3.9\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DBUILD_tktray=/\*\*/ -DHAVE_STDIO_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_STRINGS_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_UNISTD_H=1 -DSTDC_HEADERS=1 -DMAD_TK_PACKAGER=0 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DTCL_THREADS=1 -DUSE_TCL_STUBS=1 -DUSE_TCLOO_STUBS=1 -DUSE_TK_STUBS=1 -DMODULE_SCOPE=extern\ __attribute__\(\(__visibility__\(\"hidden\"\)\)\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DUSE_TCL_STUBS=1 -DUSE_TK_STUBS=1 -DBUILD_tktray  -I"/usr/include/tcl/generic" -I"/usr/include/tcl/unix" -I"/usr/include/tk/generic" -I"/usr/include/tk/unix"     -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -pipe -O2 -fomit-frame-pointer -DNDEBUG -Wall -fPIC  -c `echo tktray.c` -o tktray.o
x86_64-alt-linux-gcc -DPACKAGE_NAME=\"tktray\" -DPACKAGE_TARNAME=\"tktray\" -DPACKAGE_VERSION=\"1.3.9\" -DPACKAGE_STRING=\"tktray\ 1.3.9\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DBUILD_tktray=/\*\*/ -DHAVE_STDIO_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_STRINGS_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_UNISTD_H=1 -DSTDC_HEADERS=1 -DMAD_TK_PACKAGER=0 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DTCL_THREADS=1 -DUSE_TCL_STUBS=1 -DUSE_TCLOO_STUBS=1 -DUSE_TK_STUBS=1 -DMODULE_SCOPE=extern\ __attribute__\(\(__visibility__\(\"hidden\"\)\)\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DUSE_TCL_STUBS=1 -DUSE_TK_STUBS=1 -DBUILD_tktray  -I"/usr/include/tcl/generic" -I"/usr/include/tcl/unix" -I"/usr/include/tk/generic" -I"/usr/include/tk/unix"     -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -pipe -O2 -fomit-frame-pointer -DNDEBUG -Wall -fPIC  -c `echo tktray.c` -o tktray.o
x86_64-alt-linux-gcc -DPACKAGE_NAME=\"tktray\" -DPACKAGE_TARNAME=\"tktray\" -DPACKAGE_VERSION=\"1.3.9\" -DPACKAGE_STRING=\"tktray\ 1.3.9\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DBUILD_tktray=/\*\*/ -DHAVE_STDIO_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_STRINGS_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_UNISTD_H=1 -DSTDC_HEADERS=1 -DMAD_TK_PACKAGER=0 -DUSE_THREAD_ALLOC=1 -D_REENTRANT=1 -D_THREAD_SAFE=1 -DTCL_THREADS=1 -DUSE_TCL_STUBS=1 -DUSE_TCLOO_STUBS=1 -DUSE_TK_STUBS=1 -DMODULE_SCOPE=extern\ __attribute__\(\(__visibility__\(\"hidden\"\)\)\) -DHAVE_HIDDEN=1 -DHAVE_CAST_TO_UNION=1 -D_LARGEFILE64_SOURCE=1 -DTCL_WIDE_INT_IS_LONG=1 -DUSE_TCL_STUBS=1 -DUSE_TK_STUBS=1 -DBUILD_tktray  -I"/usr/include/tcl/generic" -I"/usr/include/tcl/unix" -I"/usr/include/tk/generic" -I"/usr/include/tk/unix"     -pipe -frecord-gcc-switches -Wall -g -O2 -flto=auto -pipe -O2 -fomit-frame-pointer -DNDEBUG -Wall -fPIC  -c `echo tktray.c` -o tktray.o
<command-line>: warning: "BUILD_tktray" redefined
<command-line>: warning: "BUILD_tktray" redefined
<command-line>: warning: "BUILD_tktray" redefined
<command-line>: note: this is the location of the previous definition
<command-line>: note: this is the location of the previous definition
<command-line>: note: this is the location of the previous definition
tktray.c: In function 'TKU_WmWithdraw':
tktray.c: In function 'TKU_WmWithdraw':
tktray.c: In function 'TKU_WmWithdraw':
tktray.c:74:5: error: implicit declaration of function 'TkpWmSetState' [-Wimplicit-function-declaration]
tktray.c:74:5: error: implicit declaration of function 'TkpWmSetState' [-Wimplicit-function-declaration]
tktray.c:74:5: error: implicit declaration of function 'TkpWmSetState' [-Wimplicit-function-declaration]
   74 |     TkpWmSetState((TkWindow*)winPtr, WithdrawnState);
   74 |     TkpWmSetState((TkWindow*)winPtr, WithdrawnState);
   74 |     TkpWmSetState((TkWindow*)winPtr, WithdrawnState);
      |     ^~~~~~~~~~~~~
      |     ^~~~~~~~~~~~~
      |     ^~~~~~~~~~~~~
make: *** [Makefile:288: tktray.o] Error 1
make: *** [Makefile:288: tktray.o] Error 1
make: *** [Makefile:288: tktray.o] Error 1
make: *** [Makefile:288: tktray.o] Error 1
make: Leaving directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
make: Leaving directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
make: Leaving directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
make: Leaving directory '/usr/src/RPM/BUILD/tcl-tktray-1.3.9'
error: Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
error: Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)








RPM build errors:
RPM build errors:
RPM build errors:
RPM build errors:
    Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
    Bad exit status from /usr/src/tmp/rpm-tmp.83896 (%build)
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
Command exited with non-zero status 1
0.93user 1.03system 0:01.81elapsed 108%CPU (0avgtext+0avgdata 33088maxresident)k
0.93user 1.03system 0:01.81elapsed 108%CPU (0avgtext+0avgdata 33088maxresident)k
0.93user 1.03system 0:01.81elapsed 108%CPU (0avgtext+0avgdata 33088maxresident)k
0inputs+0outputs (0major+205437minor)pagefaults 0swaps
0inputs+0outputs (0major+205437minor)pagefaults 0swaps
0inputs+0outputs (0major+205437minor)pagefaults 0swaps
hsh-rebuild: rebuild of `tcl-tktray-1.3.9-alt1.src.rpm' failed.
hsh-rebuild: rebuild of `tcl-tktray-1.3.9-alt1.src.rpm' failed.
hsh-rebuild: rebuild of `tcl-tktray-1.3.9-alt1.src.rpm' failed.
Command exited with non-zero status 1
Command exited with non-zero status 1
3.34user 2.53system 0:11.38elapsed 51%CPU (0avgtext+0avgdata 140992maxresident)k
3.34user 2.53system 0:11.38elapsed 51%CPU (0avgtext+0avgdata 140992maxresident)k
5664inputs+0outputs (0major+197867minor)pagefaults 0swaps
